# hylreg

./: .gitignore  CMakeLists.txt  README.md
DeepLearning/: CMakeLists.txt
Demo/MyComponents/: MyComponents.qmlproject  MyComponents.qmlproject.qtds
Demo/MyComponents/MyComponents/: Constants.qml  DirectoryFontLoader.qml  qmldir
Demo/MyComponents/MyComponents/designer/: plugin.metainfo
Demo/MyComponents/MyComponentsContent/: App.qml  Main.ui.qml  MyRepeater.ui.qml  MyView.ui.qml  TabOne.ui.qml  TabTow.ui.qml
Demo/MyDLL/: CMakeLists.txt  main.cpp
Demo/MyDLL/include/: mylib.h
Demo/MyDLL/src/: mylib.cpp
Demo/MyQtApp/: CMakeLists.txt  Main.qml  imageprovider.cpp  imageprovider.h  main.cpp  model.cpp  model.h  mythread.cpp  mythread.h  mythreadpool.cpp  mythreadpool.h  resource.qrc  threadcontroller.cpp  threadcontroller.h
Demo/MyROS/src/interface/: CMakeLists.txt
Demo/MyROS/src/my_point_cloud/: CMakeLists.txt  package.xml
Demo/MyROS/src/my_point_cloud/src/: point_cloud.cpp  point_cloud_pub.cpp  point_cloud_sub.cpp
Demo/MyROS/src/pubsub/: CMakeLists.txt  package.xml
Demo/MyROS/src/pubsub/launch/: mylaunch.py
Demo/MyROS/src/pubsub/src/: ImagePointCloud.cpp  pubsub.cpp
Demo/MyROS/src/rosyolo/: package.xml  setup.cfg  setup.py
Demo/MyROS/src/rosyolo/rosyolo/: rosyolo.py
Demo/MyROSCar/src/interface/: package.xml
Demo/MyROSCar/src/mymbot/: CMakeLists.txt  package.xml
Demo/MyROSCar/src/mymbot/gazebo/: mbot_with_rgbd_gazebo.xacro
Demo/MyROSCar/src/mymbot/launch/: load_mbot_rgbd_into_gazebo.launch.py  mbot_rgbd.launch.py
Demo/MyROSCar/src/mymbot/src/: rgbdSub.cpp
Demo/MyROSCar/src/mymbot/urdf/: mbot_base.urdf
Demo/MyVision/: CMakeLists.txt  Main.qml  MyVision.qmlproject  MyVision.qmlproject.qtds  cameraworker.cpp  cameraworker.h  imageprocessingtask.cpp  imageprocessingtask.h  imageprovider.cpp  imageprovider.h  main.cpp  model.cpp  model.h  modelmanager.cpp  modelmanager.h  mythread.cpp  mythread.h  res.qrc  settingsmanager.cpp  settingsmanager.h  threadmanager.cpp  threadmanager.h  videoframeprovider.cpp  videoframeprovider.h  vision.cpp  vision.h  worker.cpp  worker.h  yolo_v8.cpp  yolo_v8.h
Demo/MyVision/MyModule/: MyComponent.qml
Demo/MyVision/MyVision/: Constants.qml  DirectoryFontLoader.qml  qmldir
Demo/MyVision/MyVisionContent/: Main.qml
Demo/MyVision/YOLOv8-ONNXRuntime-CPP/: CMakeLists.txt  inference.cpp  inference.h  main.cpp
Demo/MyYOLO/: Test.py  analytics.py  distance-calculation.py  heatmaps.py  instance-segmentation-and-tracking.py  object-blurring.py  object-counting.py  object-cropping.py  parking-management.py  queue-management.py  region-counting.py  security-alarm-system.py  speed-estimation.py  streamlit-live-inference.py  trackzone.py  vision-eye.py  workouts-monitoring.py
Demo/MyYOLO/Test/: k_test.py  kfold-cross-validation.py
ORT/: CMakeLists.txt  main.cpp
ORT/MyORTTest/: CMakeLists.txt  main.cpp
ORT/yolo/: yolov8_onnxruntime_demo.cpp
OpenCV/: CMakeLists.txt  main.cpp
OpenCV/Features/: AKAZEAndORBPlanarTracking.cpp  AKAZELocalFeaturesMatching.cpp  CreatingCornerDetector.cpp  DetectingCornersLocationInSubpixels.cpp  DetectionOfPlanarObjects .cpp  FeatureDescription.cpp  FeatureDetection.cpp  FeatureMatchingWithFLANN.cpp  Features2D+HomographyFindObject.cpp  HarrisCornerDetector.cpp  Shi-TomasiCornerDetector.cpp
OpenCV/Imgproc/Contours/: CMakeLists.txt  ConvexHull.cpp  FindingContours.cpp
Other/: CMakeLists.txt
Other/PointCloudHandEyeCalibration/: CMakeLists.txt  HandEyeCalibration.cpp  HandEyeCalibration.h  main.cpp
Other/git/: .gitgnore的使用.md
Other/hand_eye_calibration/: CMakeLists.txt  hand_eye_calibration.cpp  readme.md
PCL/: CMakeLists.txt
PCL/Applications/: build_tree.cpp  nearest_neighbors.cpp
PCL/Features/: estimate_normals.cpp  normal_estimation_using_integral_images.cpp
PCL/Filtering/: condition_filter.cpp  extract_indices.cpp  pass_through_filter.cpp  project_inliers.cpp  statistical_outlier_removal.cpp  voxel_grid_filter.cpp
PCL/IO/: concatenate_point_clouds.cpp  pcd_read.cpp  pcd_write.cpp
PCL/KdTree/: kd_tree.cpp
PCL/Keypoints/: Harris.cpp  ISS.cpp  NARF.cpp  SIFT.cpp  narf_keypoint_extraction.cpp
PCL/My/: CMakeLists.txt
PCL/My/PointCloudMeasurements/: FaceToFace.cpp
PCL/Octree/: point_cloud_compression.cpp
PCL/Other/: GPUTest.cpp  PCA.cpp
PCL/Recognition/: correspondence_grouping.cpp  global_hypothesis_verification.cpp  implicit_shape_model.cpp
PCL/Registration/: alignment_prerejective.cpp  gicp.cpp  icp.cpp  interactive_icp.cpp  ndt.cpp
PCL/SampleConsensus/: random_sample_consensus.cpp
PCL/Segmentation/: bare_earth.cpp  cluster_extraction.cpp  conditional_euclidean_clustering.cpp  cylinder_segmentation.cpp  don_segmentation.cpp  min_cut_segmentation.cpp  model_outlier_removal.cpp  planar_segmentation.cpp  region_growing_rgb_segmentation.cpp  region_growing_segmentation.cpp
PCL/Surface/: concave_hull_2d.cpp  resampling.cpp
PCL/data/: object_templates.txt
QT/: CMakeLists.txt
QT/QML/: CMakeLists.txt  Main.qml  main.cpp
QT/QML/MyVision/: MyVision.qmlproject.qtds
QT/QML/MyVision/MyVision/designer/: plugin.metainfo
QT/QML/MyVision/MyVisionContent/: App.qml  Main.qml  Screen01.ui.qml
QT/QML/QML_ELEMENT_USE/: CMakeLists.txt  Main.qml  main.cpp  message.cpp  message.h
QT/QWidget/: CMakeLists.txt
QT/QWidget/GetUIElements/: CMakeLists.txt  class1.cpp  class1.h  class2.cpp  class2.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT/QWidget/ThreadPools/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mywork.cpp  mywork.h
Torch/: CMakeLists.txt  main.cpp
Torch/pytorch/: tensor_tutorial.ipynb
YOLO/: benchmark.py  export.py  predict.py  track.py  train.py  val.py
